# mp2-lab3-arithmetic

./: .gitignore  CMakeLists.txt  Новый текстовый документ.txt
Google_tests/: CMakeLists.txt
include/: ConsoleUI.h  arithmetic.h  stack.h
samples/: main.cpp  main_arithmetic.cpp
sln/vc10/: arithmetic2.sln  sample_utmatrix.vcxproj  sample_utmatrix.vcxproj.filters  test_utmatrix.vcxproj  test_utmatrix.vcxproj.filters
sln/vc10/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  sample_arithmetic2.ilk  sample_arithmetic2_manifest.rc  sample_utmatrix.ilk  test_arithmetic.ilk  test_arithmetic_manifest.rc  test_utmatrix.ilk  test_utmatrix.lastbuildstate  vc100.idb
sln/vc10/Release/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  sample_utmatrix.lastbuildstate  test_arithmetic.lastbuildstate
sln/vc10/arithmetic/: arithmetic.cpp  arithmetic.vcxproj  arithmetic.vcxproj.filters
sln/vc10/sample/: 1a.txt  sample.vcxproj  sample.vcxproj.filters
sln/vc10/stack/: stack.vcxproj  stack.vcxproj.filters
sln/vc9/: arithmetic.sln
src/: arithmetic.cpp  stack.cpp
test/: test_arithmetic.cpp  test_main.cpp  test_stack.cpp  test_tmatrix.cpp  test_tvector.cpp
(+26 files in other folders)
